# herdr-client

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml  update-herdr.yml
.woodpecker/: ci.yaml
openspec/: config.yaml
openspec/changes/herdr-typed-client/: design.md  proposal.md  tasks.md
openspec/changes/herdr-typed-client/specs/herdr-workmux-backend/: spec.md
scripts/: flatten.py  regen.sh
src/: error.rs  lib.rs  methods.rs  transport.rs
tests/: wire.rs
