[package]
name = "herdr-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Typed Rust client for herdr's socket API — schema-generated types plus a thin transport."
repository = "https://git.bph/bryan/herdr-client"
readme = "README.md"
keywords = ["herdr", "terminal", "multiplexer", "workmux"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regress = "0.10"
