[package]
name = "herdr-client"
# Tracks the herdr version this client is generated against (see the Release
# workflow). Bumped automatically by .github/workflows/update-herdr.yml.
version = "0.7.4"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Typed Rust client for herdr's socket API — schema-generated types plus a thin transport."
repository = "https://git.bph/bryan/herdr-client"
readme = "README.md"
keywords = ["herdr", "terminal", "multiplexer", "workmux"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regress = "0.10"
